# python-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json  docker-compose.yml
{{cookiecutter.project_name}}/tests/: test_python_template.py
